# camera_model_py

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  conanfile.py  pyproject.toml
python/: example.py
python/camera_model/: CMakeLists.txt  __init__.py  camera_model.cpp
